--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html ng-app>
   <head>
-    <script src="angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
+    <!--<script src="angular.min.js"></script>-->
     <script src="riffwave.js"></script>
     <script src="underscore.js"></script>
     <script type="text/javascript"
             src="http://www.parsecdn.com/js/parse-1.1.5.min.js"></script>
     <script src="controllers.js"></script>
-    <link rel="stylesheet" type="text/css" href="bootstrap.css" />
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link rel="stylesheet" type="text/css" href="bootstrap.css" />-->
     <style type="text/css">
       table {
           border-spacing: 0px;
